working on figuring things out

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
-
-
-  <app-root> Home page here </app-root>
+<body ng-app>
+  <div ng-include= "'~/partials/partialHome.html'"></div>
+  <app-root> app works! </app-root>
 </body>
 </html>
+
