--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,14 @@
 <!doctype html>
-<body ng-app>
-  <div ng-include= "'~/partials/partialHome.html'"></div>
-  <app-root> app works! </app-root>
+<html>
+  <head>
+    <base href= "/">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body>  
+   <app-root> loading... </app-root>
 </body>
 </html>
 
