--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/assets/logo.png">
  
   <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
-	<link rel="stylesheet" href="../Styles/cutStyles.css">
+	<link rel="stylesheet">
 
 
 </head>
